--- a/crm/requirements.txt
+++ b/crm/requirements.txt
@@ -1,19 +1,17 @@
 asgiref==3.3.1
-boto3==1.16.46
-botocore==1.19.46
-Django==3.1.4
+boto3==1.16.50
+botocore==1.19.50
+Django==3.1.5
 django-filter==2.4.0
 django-storages==1.11.1
-docutils==0.15.2
 gunicorn==20.0.4
 jmespath==0.10.0
-libarchive-c==2.8
-MarkupSafe==1.1.1
-Pillow==8.0.1
+Pillow==8.1.0
+pkg-resources==0.0.0
 python-dateutil==2.8.1
-pytz==2020.4
+pytz==2020.5
 s3transfer==0.3.3
-six==1.12.0
+six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.2
 whitenoise==5.2.0
